feat:added Ai powered extraction class and implementation of the same